--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -7,14 +7,13 @@
         	Hide Completed Tasks
         </label>	
 	{{> loginButtons}}
-        {{#if currentUser}}
+    {{#if currentUser}}
         <form class="new-task">
-          <input type="text" name="text" placeholder="Type to add new tasks" />
+           <input type="text" name="text" placeholder="Type to add new tasks" />
+           <input type="text" name="desc" placeholder="Type description" />
+           <input type="date" name="date">
         </form>
-      {{/if}}
-	<form class="new-task">
-        <input type="text" name="text" placeholder="Type to add new tasks" />
-      </form>
+    {{/if}}
     </header>
  
     <ul>
@@ -26,5 +25,7 @@
 </body>
  
 <template name="task">
-  <li>{{text}}</li>
+  <li>
+  {{text}} - {{desc}} : {{date}}
+  </li>
 </template>
